# ViP-LLaVA

./: .dockerignore  .gitignore  README.md  cog.yaml  predict.py  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/ISSUE_TEMPLATE/: 3-question.yaml  4-discussion.yaml
docs/: Customize_Component.md  Data.md  Evaluation.md  Evaluation_image.md  Finetune_Custom_Data.md  Intel.md  MODEL_ZOO.md  Windows.md  macOS.md  study_llm_backbone.md
llava/: __init__.py  conversation.py  mm_utils.py  visual_prompt_generator.py  visual_prompt_organizer.py
llava/eval/: model_vqa.py  model_vqa_loader.py  model_vqa_loader_vip.py  model_vqa_mmbench.py  model_vqa_qbench.py  model_vqa_science.py  run_llava.py
llava/model/: __init__.py  builder.py  llava_arch.py
llava/model/language_model/: configuration_phi3.py  llava_mpt.py  llava_phi3.py  modeling_phi3.py
llava/model/multimodal_encoder/: builder.py  clip_4layer_encoder.py
llava/model/multimodal_projector/: builder.py
llava/serve/: cli.py  cli_vip.py  gradio_web_server.py
llava/train/: llava_trainer.py  train.py  train_mem.py
playground/data/eval/vip-bench-example-results/: vip-llava-7b-human.json
playground/data/prompts/: refcocog.text  vg.text
scripts/: finetune_llava_1_5_llama3.sh  finetune_llava_1_5_phi3.sh  finetune_stage2.sh  finetune_stage2_lora.sh  finetune_stage3.sh  finetune_task.sh  finetune_task_lora.sh  finetune_vip_llava_llama3_stage2.sh  finetune_vip_llava_llama3_stage3.sh  finetune_vip_llava_phi3_stage2.sh  finetune_vip_llava_phi3_stage3.sh  pretrain.sh  pretrain_llava_1_5_llama3.sh  pretrain_llava_1_5_phi3.sh  pretrain_vip_llava_llama3.sh  pretrain_vip_llava_phi3.sh  zero3_offload.json
scripts/eval/: pointQA.sh  v7w.sh  vcr_qa.sh  vcr_qar.sh  vip-bench_evaluator.py  vipbench.sh
scripts/v1_5/eval/: gqa.sh  llavabench.sh  mmbench.sh  mmbench_cn.sh  mme.sh  mmvet.sh  pope.sh  seed-img.sh  seed-process-anno.py  seed.sh  sqa.sh  textvqa.sh  vizwiz.sh  vqav2.sh
